force-app/main/default/objects/Licencia_medica__c/Licencia_medica__c.object-meta.xml
<CustomObject>
    <label>Licencia medica</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Nombre de Licencia medica</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Licencias medicas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>