force-app/main/default/objects/Licencia_medica__c/fields/fecha_actual__c.field-meta.xml
<CustomField>
    <fullName>fecha_actual__c</fullName>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fecha actual</label>
    <type>Date</type>
</CustomField>