force-app/main/default/objects/Licencia_medica__c/fields/Fecha_inicio_de_licencia__c.field-meta.xml
<CustomField>
    <fullName>Fecha_inicio_de_licencia__c</fullName>
    <label>Fecha inicio de licencia</label>
    <type>Date</type>
</CustomField>