force-app/main/default/objects/Licencia_medica__c/fields/Fecha_terminaci_n_licencia_medica__c.field-meta.xml
<CustomField>
    <fullName>Fecha_terminaci_n_licencia_medica__c</fullName>
    <label>Fecha terminación licencia medica</label>
    <type>Date</type>
</CustomField>