force-app/main/default/objects/Licencia_medica__c/fields/Usuario__c.field-meta.xml
<CustomField>
    <fullName>Usuario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuario</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Licencias_medicas</relationshipName>
    <type>Lookup</type>
</CustomField>